Fixed the button placements for the loggin screen. Fixed for rotation.

--- a/HabitOfGravity/app/src/main/res/layout/fragment_login.xml
+++ b/HabitOfGravity/app/src/main/res/layout/fragment_login.xml
@@ -29,19 +29,16 @@
         android:id="@+id/LoginPassword"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="256dp"
         android:layout_marginEnd="85dp"
-        android:layout_marginLeft="84dp"
-        android:layout_marginRight="85dp"
         android:layout_marginStart="84dp"
-        android:layout_marginTop="0dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LoginEmail" />
+        app:layout_constraintTop_toBottomOf="@+id/LoginEmail"
+        android:layout_marginRight="85dp"
+        android:layout_marginLeft="84dp" />
 
     <Button
         android:id="@+id/Login"
@@ -71,25 +68,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_marginEnd="132dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Register"
-        android:layout_marginRight="132dp" />
-
-    <Button
-        android:id="@+id/OfflineLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Offline Login"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/OfflineLogin"
+        app:layout_constraintTop_toBottomOf="@+id/Register" />
+
+    <Button
+        android:id="@+id/OfflineLogin"
+        android:layout_width="122dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Offline Login"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/FB_login_button" />
+        app:layout_constraintTop_toBottomOf="@+id/Register"
+        android:layout_marginLeft="8dp" />
 
     <!--
     <TextView
